new commits: save outliersim as well

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ ENV/
 scikit-learn/
 aaronssache/
 aaronsscrtip.py
-# SourceCode/output 
+SourceCode/output 
+.VSCodeCounter/
 # SourceCode/output späte wieder rausnehmen
